tests/lifetime/inter_decl/elision_rule2.err.expected
error: at 17:5: [LT-LifetimeMismatch] In function 'identity': lifetime mismatch: expected value with region 's2, found value with region 's0
    |
 16 |   entry:
 17 |     $return.* = copy r;
    |     ^^^^^^^^^^^^^^^^^^
 18 |     return
    |
error: at 25:5: [LT-LifetimeMismatch] In function 'pick_first': lifetime mismatch: expected value with region 's3, found value with region 's0
    |
 24 |   entry:
 25 |     $return.* = copy x;
    |     ^^^^^^^^^^^^^^^^^^
 26 |     return
    |
error: at 31:5: [LT-LifetimeMismatch] In function 'pick_second': lifetime mismatch: expected value with region 's3, found value with region 's1
    |
 30 |   entry:
 31 |     $return.* = copy y;
    |     ^^^^^^^^^^^^^^^^^^
 32 |     return
    |
error: at 41:5: [LT-LifetimeMismatch] In function 'mixed_elision': lifetime mismatch: expected value with region 's2, found value with region 'a
    |
 40 |   entry:
 41 |     $return.* = copy x;
    |     ^^^^^^^^^^^^^^^^^^
 42 |     return
    |
